@@ -159,6 +159,8 @@ Distributions
 +-------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------+
 | `Bernoulli distribution <http://simplestatistics.readthedocs.io/en/latest/#bernoulli-distribution>`__                   | ``bernoulli(0.25)``                                          |
 +-------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------+
+| `Poisson distribution <http://simplestatistics.readthedocs.io/en/latest/#poisson-distribution>`__                       | ``poisson(3, [0, 1, 2, 3])``                                 |
++-------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------+
 | `One-sample t-test <http://simplestatistics.readthedocs.io/en/latest/#one-sample-t-test>`__                             | ``t_test([1, 2, 3, 4, 5, 6], 3.385)``                        |
 +-------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------+
 | `Chi Squared Distribution Table <http://simplestatistics.readthedocs.io/en/latest/#chi-squared-distribution-table>`__   | ``chi_squared_dist_table(k = 10, p = .01)``                  |
